# lemonade-cashier

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/security/: audit-status.json
.claude/helpers/: security-scanner.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  department-change.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  codex-review.yml  docs.yml  gemini-review.yml  monitor_selfhosted_runners.yml  openhands-review.yml  pr-agent-review.yml  qodo-merge.yml  runner_heartbeat.yml  test-new-runner.yml
data/: sample_products.csv  scenarios.jsonl
docs/: ARCHITECTURE.md  BUILD_ORDER.md  LEMONADE_STORE.md  SAFETY.md  VISION_PIPELINE.md  index.md
docs/superpowers/plans/: 2026-05-23-vision-server-implementation.md
docs/wiki/: README.md  agent-model.md  agents.md  architecture.md  audit-log.md  conventions.md  financial-core.md  runbook.md
openspec/: project.md
openspec/specs/cashier/: spec.md
openspec/templates/: proposal.md  tasks.md
scripts/: bench_normalize_quants.py  publish.sh  replay.py  seed_products.py  setup_lemond.sh
src/lemonade_cashier/: __init__.py  __main__.py  cli.py
tests/: conftest.py  test_agent_activity.py  test_agent_identity.py  test_agent_proposals.py  test_agent_replay.py  test_bags.py  test_cart.py  test_cash.py  test_cit.py  test_eval.py  test_eventlog.py  test_flm_client.py  test_inventory.py  test_lockout.py  test_money.py  test_normalize_quant_bench.py  test_parser.py  test_pins.py  test_policy.py  test_qa_agent.py  test_receipts.py  test_replay.py  test_replay_cli.py  test_risk.py  test_safety_profile.py  test_safety_report.py  test_store_events.py  test_summarizer.py  test_supervisor.py  test_tamper.py  test_totals.py
(+43 files in other folders)
