[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lemonade-cashier"
version = "0.1.0"
description = "Local-first cashier assistant with deterministic financial core, audit/replay, and offline AI agents (Strix Halo + Lemonade + GAIA)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Lemonade Cashier contributors" }]
keywords = ["pos", "cashier", "offline-first", "lemonade", "gaia", "strix-halo", "npu"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial :: Point-Of-Sale",
]
dependencies = ["lemonade-agents>=0.1.0"]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.10",
]
lemonade = [
  # Optional: only needed if you call Lemonade Server's OpenAI-compatible API.
  # The default stack uses the stdlib urllib client and needs no extra deps.
]

[project.scripts]
lemonade-cashier = "lemonade_cashier.cli:main"

[project.urls]
Homepage = "https://github.com/bong-water-water-bong/lemonade-cashier"
Issues = "https://github.com/bong-water-water-bong/lemonade-cashier/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lemonade_cashier = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["lemonade_cashier"]
